kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arkive
  labels:
    name: arkive
    app: arkive-dms
